--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,14 @@
 header {
-  margin: 0;
+  margin-left: 5%;
+  margin-right: 5%;
+  margin-top: 20px;
+  text-align: center;
   background-color: blue;
 }
 body {
-  margin: 0;
+  margin-left: 10%;
+  margin-right: 10%;
+  margin-top: 20px;
 }
 
 h1 {
@@ -18,4 +23,11 @@ h2{
 
 nav{
   background-color: green;
+  margin-left: 15%;
+  margin-right: 15%;
+}
+
+nav a{
+  display: inline-block;
+  text-align: center;
 }
